<resources>
	<string name="main_food_list">Главная</string>
	<string name="main_recipes">Рецепты</string>
	<string name="main_to_buy_list">Покупки</string>
	<string name="main_profile">Профиль</string>

	<string name="app_name">Food Organizer</string>
	<string name="introFirstMain">Храните информацию о продуктах!</string>
	<string name="introSecondMain">Добавляйте рецепты!</string>
	<string name="introThirdMain">Планируйте покупки!</string>
	<string name="introFirstSub">Следите за сроком годности с помощью напоминаний</string>
	<string name="introSecondSub">А также смотрите наличие продуктов для них</string>
	<string name="introThirdSub">И контролируйте их с помошью напоминаний</string>
	<string name="buttonRegister">Зарегистрироваться</string>
	<string name="editTextName">Имя</string>
	<string name="TextViewRegistration">Регистрация</string>
	<string name="inputIncorrect">Имя должно состоять только из букв</string>
	<string name="addManually">Вручную</string>
	<string name="cancel">Отмена</string>
	<string name="add">Добавить</string>
	<string name="addFood">Добавить продукт</string>
	<string name="foodName">Название</string>
	<string name="placement">Расположение</string>
	<string name="quantity">Количество</string>
	<string name="plus_sign">+</string>
	<string name="bestBefore">Годен до</string>
	<string name="start">Начать</string>
	<string name="next">Далее</string>
	<string name="addProduct">Добавить продукт</string>
	<string name="chooseWayToAdd">Выберите способ добавления</string>
	<string name="reminder1DayBefore">За 1 день</string>
	<string name="reminder2DayBefore">За 2 дня</string>
	<string name="reminder">Напоминание об истечении срока годности</string>
	<string name="page_title">Список продуктов</string>
	<string name="filter">Отфильтровать</string>
	<string name="search">Поиск</string>
	<string name="search_hint">Поиск</string>
	<string name="foodInfo">Информация</string>
	<string name="markAsRecycled">Употребить</string>
	<string name="markAsTrashed">Утилизировать</string>
	<string name="save">Сохранить</string>
	<string name="confirm">Подтвердить</string>
	<string name="recipeType">Тип рецепта</string>
	<string name="addRecipe">Добавить рецепт</string>
	<string name="recipeName">Название</string>
	<string name="time_to_cook">Время приготовления</string>
	<string name="difficulty">Сложность</string>
	<string name="saveRecipe">Сохранить</string>
	<string name="recipe">Рецепт</string>
	<string name="deleteRecipe">Удалить</string>
	<string name="ingredients">Ингредиенты</string>
	<string name="addList">Добавить список покупок</string>
	<string name="listName">Название</string>
	<string name="buy_date">Дата покупки</string>
	<string name="deleted">Удалено</string>
	<string name="undo">Вернуть</string>
	<string name="statistics">Статистика</string>
	<string name="settings">Настройки</string>
	<string name="monthStatistics">Статистика за месяц</string>
	<string name="kg">кг</string>
	<string name="quantity_kg">Количество (кг)</string>
	<string name="useRecipe">Использовать рецепт</string>
	<string name="searchRealFood">Найти продукт по названию</string>
	<string name="clear">Убрать связь</string>
	<string name="added_quantity">Добавлено (кг)</string>
	<string name="added">Добавлено</string>
	<string name="allow_notifications">Разрешить уведомления</string>
	<string name="when_notify">Когда вы хотите получать уведомления?</string>
	<string name="time_when_notify">Время напоминаний</string>
	<string name="suggest_adding_food">Предлагать добавление продуктов при отметке в списке покупок</string>
	<string name="skip">Пропустить</string>
</resources>