<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".screens.addFood.ui.AddFoodFragment">

	<TextView
		android:id="@+id/title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="10dp"
		android:layout_marginTop="40dp"
		android:text="@string/addFood"
		android:textSize="30sp"
		android:textStyle="bold"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:id="@+id/foodIcon"
		style="@style/Widget.AppCompat.ImageButton"
		android:layout_width="100dp"
		android:layout_height="100dp"
		android:layout_margin="15dp"
		android:src="@drawable/plus_ic"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/title" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/foodNameLayout"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		app:layout_constraintBottom_toBottomOf="@id/foodIcon"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/foodIcon"
		app:layout_constraintTop_toTopOf="@id/foodIcon">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/foodName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/foodName"
			android:maxLength="15"
			android:maxLines="1"
			android:singleLine="true" />
	</com.google.android.material.textfield.TextInputLayout>

	<TextView
		android:id="@+id/foodPlacementText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:text="@string/placement"
		app:layout_constraintEnd_toStartOf="@id/foodPlacementScroll"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/foodIcon" />

	<HorizontalScrollView
		android:id="@+id/foodPlacementScroll"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="@id/foodPlacementText"
		app:layout_constraintEnd_toEndOf="@id/foodNameLayout"
		app:layout_constraintStart_toStartOf="@id/foodNameLayout"
		app:layout_constraintTop_toTopOf="@id/foodPlacementText">

		<com.google.android.material.chip.ChipGroup
			android:id="@+id/chip_group_placement"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			app:chipSpacingHorizontal="4dp"
			app:singleSelection="true">

			<com.google.android.material.chip.Chip
				android:id="@+id/addPlacementChip"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/plus_sign"
				app:chipBackgroundColor="?attr/colorSecondary" />
		</com.google.android.material.chip.ChipGroup>
	</HorizontalScrollView>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/quantityLayout"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		app:layout_constraintStart_toStartOf="@id/foodPlacementText"
		app:layout_constraintTop_toBottomOf="@id/foodPlacementText">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/quantity"
			android:layout_width="100dp"
			android:layout_height="wrap_content"
			android:hint="@string/quantity"
			android:inputType="number|numberDecimal"
			android:maxLength="15"
			android:maxLines="1"
			android:paddingStart="10dp"
			android:singleLine="true"
			android:textSize="13sp" />
	</com.google.android.material.textfield.TextInputLayout>

	<TextView
		android:id="@+id/quantityText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/kg"
		android:textSize="20sp"
		app:layout_constraintBottom_toBottomOf="@id/quantityLayout"
		app:layout_constraintStart_toStartOf="@id/foodPlacementScroll"
		app:layout_constraintTop_toTopOf="@id/quantityLayout">

	</TextView>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/bestBeforeLayout"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		app:layout_constraintStart_toStartOf="@id/quantityLayout"
		app:layout_constraintTop_toBottomOf="@id/quantityLayout">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/bestBefore"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/bestBefore"
			android:inputType="number"
			android:maxLength="15"
			android:maxLines="1"
			android:paddingStart="10dp"
			android:singleLine="true"
			android:textSize="13sp" />
	</com.google.android.material.textfield.TextInputLayout>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:layout_constraintEnd_toEndOf="@id/quantityLayout"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/quantityLayout" />

	<TextView
		android:id="@+id/reminderText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:text="@string/reminder"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/bestBeforeLayout" />

	<com.google.android.material.chip.ChipGroup
		android:id="@+id/chip_group_reminders"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="20dp"
		app:chipSpacingHorizontal="10dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/reminderText"
		app:singleSelection="true">

		<com.google.android.material.chip.Chip
			android:id="@+id/reminder1DayBefore"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checkable="true"
			android:text="@string/reminder1DayBefore"
			app:checkedIconVisible="true"
			app:chipBackgroundColor="?attr/colorTertiaryContainer" />

		<com.google.android.material.chip.Chip
			android:id="@+id/reminder2DayBefore"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:checkable="true"
			android:text="@string/reminder2DayBefore"
			app:checkedIconVisible="true"
			app:chipBackgroundColor="?attr/colorTertiaryContainer" />
	</com.google.android.material.chip.ChipGroup>

	<Button
		android:id="@+id/addButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:text="@string/add"
		app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>