
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:windowSoftInputMode="adjustResize"
	tools:context=".screens.addRecipe.ui.AddRecipeFragment">

	<TextView
		android:id="@+id/title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="10dp"
		android:layout_marginTop="40dp"
		android:text="@string/addRecipe"
		android:textSize="30sp"
		android:textStyle="bold"
		app:layout_constraintTop_toTopOf="parent" />


	<ImageView
		android:id="@+id/recipeIcon"
		style="@style/Widget.AppCompat.ImageButton"
		android:layout_width="100dp"
		android:layout_height="100dp"
		android:layout_margin="15dp"
		android:src="@drawable/plus_ic"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/title" />

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/recipeNameLayout"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		app:layout_constraintBottom_toBottomOf="@id/recipeIcon"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/recipeIcon"
		app:layout_constraintTop_toTopOf="@id/recipeIcon">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/recipeName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/recipeName"
			android:maxLength="15"
			android:maxLines="1"
			android:singleLine="true" />
	</com.google.android.material.textfield.TextInputLayout>

	<TextView
		android:id="@+id/recipeType"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:text="@string/recipeType"
		app:layout_constraintEnd_toStartOf="@id/recipeTypeScroll"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/recipeIcon" />

	<HorizontalScrollView
		android:id="@+id/recipeTypeScroll"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintBottom_toBottomOf="@id/recipeType"
		app:layout_constraintEnd_toEndOf="@id/recipeNameLayout"
		app:layout_constraintStart_toStartOf="@id/recipeNameLayout"
		app:layout_constraintTop_toTopOf="@id/recipeType">

		<com.google.android.material.chip.ChipGroup
			android:id="@+id/chip_group_Type"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			app:chipSpacingHorizontal="4dp"
			app:singleSelection="true">

			<com.google.android.material.chip.Chip
				android:id="@+id/addTypeChip"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/plus_sign"
				app:chipBackgroundColor="?attr/colorSecondary" />
		</com.google.android.material.chip.ChipGroup>
	</HorizontalScrollView>

	<TextView
		android:id="@+id/sliderLabel"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:text="@string/difficulty"
		android:textAlignment="center"
		app:layout_constraintTop_toBottomOf="@id/recipeTypeScroll" />

	<com.google.android.material.slider.Slider
		android:id="@+id/difficultySlider"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="20dp"
		android:stepSize="1"
		android:valueFrom="1"
		android:valueTo="5"
		app:layout_constraintTop_toBottomOf="@id/sliderLabel" />


	<Button
		android:id="@+id/saveRecipeButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:text="@string/saveRecipe"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintTop_toBottomOf="@id/products" />

	<TextView
		android:id="@+id/timeToCook"
		android:layout_width="match_parent"
		android:layout_height="30dp"
		android:layout_margin="20dp"
		android:background="@drawable/to_buy_list_corners"
		android:gravity="center"
		android:hint="@string/time_to_cook"
		app:layout_constraintTop_toBottomOf="@id/difficultySlider" />


	<LinearLayout
		android:id="@+id/products"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginVertical="20dp"
		android:orientation="vertical"
		app:layout_constraintBottom_toTopOf="@id/saveRecipeButton"
		app:layout_constraintTop_toBottomOf="@id/timeToCook">

		<TextView
			android:id="@+id/addIngredients"
			android:layout_width="match_parent"
			android:layout_height="30dp"
			android:layout_marginHorizontal="20dp"
			android:background="@drawable/to_buy_list_corners"
			android:backgroundTint="?attr/colorTertiaryContainer"
			android:gravity="center"
			android:hint="@string/addFood"
			app:layout_constraintTop_toBottomOf="@id/difficultySlider" />

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/recyclerView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="20dp"
			android:background="@drawable/to_buy_list_corners"
			android:maxHeight="300dp"
			tools:itemCount="1"
			tools:listitem="@layout/add_recipe_item" />
	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
