<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:windowSoftInputMode="adjustResize"
	tools:context=".screens.addToBuyList.ui.AddToBuyListFragment">

	<TextView
		android:id="@+id/title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="10dp"
		android:layout_marginTop="40dp"
		android:text="@string/addList"
		android:textSize="30sp"
		android:textStyle="bold"
		app:layout_constraintTop_toTopOf="parent" />


	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/listNameLayout"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/title">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/listName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/listName"
			android:maxLength="15"
			android:maxLines="1"
			android:singleLine="true" />
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/datePickerLayout"
		style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		app:layout_constraintStart_toStartOf="@id/listNameLayout"
		app:layout_constraintTop_toBottomOf="@id/listNameLayout">

		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/datePicker"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/buy_date"
			android:inputType="number"
			android:maxLength="15"
			android:maxLines="1"
			android:singleLine="true"
			android:textSize="13sp" />
	</com.google.android.material.textfield.TextInputLayout>

	<LinearLayout
		android:id="@+id/products"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginVertical="20dp"
		android:orientation="vertical"
		app:layout_constraintBottom_toTopOf="@id/saveListButton"
		app:layout_constraintTop_toBottomOf="@id/datePickerLayout">

		<TextView
			android:id="@+id/addIngredients"
			android:layout_width="match_parent"
			android:layout_height="30dp"
			android:layout_marginHorizontal="20dp"
			android:background="@drawable/to_buy_list_corners"
			android:backgroundTint="?attr/colorTertiaryContainer"
			android:gravity="center"
			android:hint="@string/addFood"
			app:layout_constraintTop_toBottomOf="@id/difficultySlider" />

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/recyclerView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="20dp"
			android:background="@drawable/to_buy_list_corners"
 			tools:itemCount="1"
			tools:listitem="@layout/add_recipe_item" />
	</LinearLayout>

	<Button
		android:id="@+id/saveListButton"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:text="@string/save"
		app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
