<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".screens.profile.ui.ProfileFragment">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/topAppBarLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/topAppBar"
			style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			app:title="@string/main_profile">

			<ImageView
				android:id="@+id/settingsButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="end"
				android:layout_marginEnd="20dp"
				android:src="@drawable/ic_settings" />

		</com.google.android.material.appbar.MaterialToolbar>

	</com.google.android.material.appbar.AppBarLayout>

	<TextView
		android:id="@+id/statistics"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:gravity="center"
		android:text="@string/statistics"
		android:textSize="30sp"
		android:textStyle="bold"
		app:layout_constraintTop_toBottomOf="@id/topAppBarLayout" />


	<com.github.mikephil.charting.charts.PieChart
		android:id="@+id/chart"
		android:layout_width="match_parent"
		android:layout_height="300dp"
		android:layout_marginTop="20dp"
		app:layout_constraintTop_toBottomOf="@id/statistics" />

	<TextView
		android:id="@+id/datePickerLabel"
		android:layout_width="match_parent"
		android:layout_height="30dp"
		android:layout_margin="20dp"
		android:text="@string/monthStatistics"
		android:gravity="center"
		app:layout_constraintTop_toBottomOf="@id/chart" />
	<TextView
		android:id="@+id/datePicker"
		android:layout_width="match_parent"
		android:layout_height="30dp"
		android:layout_marginHorizontal="20dp"
		android:background="@drawable/to_buy_list_corners"
		android:gravity="center"
		app:layout_constraintTop_toBottomOf="@id/datePickerLabel" />


</androidx.constraintlayout.widget.ConstraintLayout>